refactor: 리스트를 반환할 때 원본 객체 대신 복사한 객체를 전달해주도록 변경, 일부 변수 메소드 이름 수정